--- a/A_Doc_vectors_with_word_vectors.ipynb
+++ b/A_Doc_vectors_with_word_vectors.ipynb
@@ -4,33 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"clearfix\" style=\"padding: 10px; padding-left: 0px\">\n",
-    "<h1 style=\"text-align:center\">  Notebook A : Doc vectors with word vectors</h1>\n",
-    "<h1 style=\"color:rgb(150,0,0) ;text-align:center\">  Began 21 May 2020 by Amaury de Barbuat</h1>\n",
-    "<h1 style=\"color:rgb(150,0,0) ;text-align:center\">  Updated 10 June 2020 by William Riou</h1>"
+    "# Notebook A : Doc vectors with word vectors\n",
+    "\n",
+    "Began 21 May 2020 by Amaury de Barbuat from ECL\n",
+    "\n",
+    "Updated by William Riou from ENSTA PARIS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{enumerate}\n",
-    "    \\item Intro\n",
-    "Goal is to do document embedding for each pilot report using word vectors averaging"
+    "## 0- Intro\n",
+    "\n",
+    "The goal is to do document embed for each pilot report using word vectors averaging"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:rgb(0,0,200);text-align:left\">  I. Create word embeddings</h1>\n",
-    "<br/>\n",
+    "## 1- Create word embeddings\n",
+    "\n",
     "We will do word embeddings over a given report basis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +41,24 @@
     "def process_csv(input_filename, output_filename, reports_filename):\n",
     "    \n",
     "    import pandas as pd\n",
+    "    import os.path\n",
+    "    import warnings\n",
+    "    warnings.filterwarnings('ignore')\n",
+    "    \n",
+    "    import nltk\n",
+    "    nltk.download('punkt')\n",
+    "    \n",
     "    data = pd.read_csv(input_filename, sep=',')\n",
     "    \n",
     "    final = pd.DataFrame(columns=['reports'])\n",
     "    \n",
     "    MyFile = open(output_filename,'w')\n",
+    "    if ~os.path.isfile('abbr.txt'):\n",
+    "        # abbreviation\n",
+    "        file = open('abbr.txt', 'w')\n",
+    "        file.close()\n",
     "    \n",
-    "    # abbreviation\n",
-    "    file = open('abbr.txt', 'r')\n",
+    "    file = open('abbr.txt','r')\n",
     "    abbrs = file.readlines()\n",
     "    file.close()\n",
     "    old = [] \n",
@@ -118,16 +129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/urendil/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "process_csv('ASRS3.csv', 'LineSentences_57.txt', 'reports_57.csv')"
+    "process_csv('ASRS1.csv', 'LineSentences_57.txt', 'reports_57.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +156,12 @@
     "    import random\n",
     "    lines = open(input_filename, 'r').readlines()\n",
     "    random.shuffle(lines)\n",
-    "    open(output_filename, 'w').writelines(lines)\n"
+    "    open(output_filename, 'w').writelines(lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +180,7 @@
     "def word_embedding(input_filename, vectors_filename):\n",
     "    \n",
     "    # Create the model\n",
+    "    import os\n",
     "    from gensim.models.word2vec import Word2Vec\n",
     "    from gensim.models.word2vec import LineSentence\n",
     "    sentences = LineSentence(input_filename, max_sentence_length=10000, limit=None)\n",
@@ -167,12 +188,12 @@
     "    \n",
     "    # Save model\n",
     "    from gensim.models.keyedvectors import KeyedVectors\n",
-    "    model.wv.save_word2vec_format('/Users/amow/Desktop/Project_1_ASRS/DATA_DMP_12202019/'+vectors_filename, binary=False)"
+    "    model.wv.save_word2vec_format(os.path.join(os.getcwd(),vectors_filename), binary=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +204,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:rgb(0,0,200);text-align:left\">  II. Document embeddings with word vectors averaging</h1>\n",
-    "<br/>\n",
-    "Here we want to embed each reports by averaging its word vectors"
+    "## 2- Document embeddings with word vectors averaging\n",
+    "\n",
+    "Here we want to embed each report by averaging its word vectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,74 +274,17 @@
     "        report_vector = [str(e) for e in report_vector]\n",
     "        report_vector = s.join(report_vector)\n",
     "        \n",
-    "        MyFile.write(report_vector+'\\n')\n",
-    "    "
+    "        MyFile.write(report_vector+'\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "build_doc_vectors('reports_801.csv', 'word_vectors_57_100d_5e.txt', 'w2v_doc_vectors_801_100d_5e.txt')"
+    "build_doc_vectors('reports_57.csv', 'word_vectors_57_100d_5e.txt', 'w2v_doc_vectors_57_100d_5e.txt')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "375"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file = open('w2v_doc_vectors_801_100d_5e.txt','r')\n",
-    "lines = file.readlines()\n",
-    "len(lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15251"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(lines)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\end{enumerate}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
