--- a/C_Emerging_doc_detection.ipynb
+++ b/C_Emerging_doc_detection.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"clearfix\" style=\"padding: 10px; padding-left: 0px\">\n",
-    "<h1 style=\"color:rgb(150,0,0);text-align:center\">  Notebook C : Emerging doc detection</h1>\n",
-    "<h1 style=\"color:rgb(150,0,0) ;text-align:center\">  Began 21 May 2020</h1>"
+    "# Notebook C : Emerging doc detection\n",
+    "\n",
+    "Began 21 May 2020 by Amaury de Barbuat from ECL\n",
+    "\n",
+    "Updated by William Riou from ENSTA PARIS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:rgb(0,150,0);text-align:left\">  Intro</h1>\n",
-    "<br/>\n",
-    "<br/>\n",
+    "## 0- Intro\n",
+    "\n",
     "This notebook is made for testing whether a new document belongs to a previous cluster or is a new type of doc."
    ]
   },
@@ -23,15 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:rgb(0,0,200);text-align:left\">  Compare a new document to our clusters</h1>\n",
-    "<br/>\n",
-    "<br/>\n",
+    "## 1- Compare a new document to our clusters\n",
+    "\n",
     "To do so we want to embed a new document and compare it vector representation to previous clusters. We have to set a similarity threshold while comparing the new vector to every centroids. This test is our way to detect emerging topics or not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a) loading labels and centroids"
+    "### 11- Loading labels and centroids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +109,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b1) loading a new report"
+    "### 12- Loading a new report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b2) loading a report from training set"
+    "### 13- Loading a report from training set"
    ]
   },
   {
@@ -179,12 +179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### c) maximum similarity score with previous clusters"
+    "### 14- Maximum similarity score with previous clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_number_closest_cluster' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-f2a44cc2280f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmax_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_number_closest_cluster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcentroids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdoc_vector\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_number_closest_cluster' is not defined"
+     ]
+    }
+   ],
    "source": [
     "max_score = get_number_closest_cluster(centroids, doc_vector)"
    ]
@@ -255,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### d) test if new doc vector belongs to an old cluster"
+    "### 15- Test if new doc vector belongs to an old cluster"
    ]
   },
   {
@@ -319,6 +331,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2- Topic detection from clusters of documents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea is to get topics strength for each document and to sort the topic strenghts. The higher a topic strenght is the more relevant the topic is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../Strenght.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-919429770cac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../Strenght.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\";\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mreader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../Strenght.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"Strenght.csv\",'r') as csvfile:\n",
+    "    reader = csvfile.reader(csvfile,sep=\";\")\n",
+    "    reader.readlines(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -342,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
